# CA2_BugsLife_Ema_Eiliakas_D00255056

./: Beatle.cpp  Beatle.h  Board.cpp  Board.h  Bug.cpp  Bug.h  CMakeLists.txt  Crawler.cpp  Crawler.h  Direction.cpp  Direction.h  Hopper.cpp  Hopper.h  README.md  main.cpp
