cmake_minimum_required(VERSION 3.27)
project(CA2_BugsLife_Ema_Eiliakas_D00255056)

set(CMAKE_CXX_STANDARD 17)

add_executable(CA2_BugsLife_Ema_Eiliakas_D00255056 main.cpp
        Bug.cpp
        Bug.h
        Board.cpp
        Board.h
        Crawler.cpp
        Crawler.h
        Hopper.cpp
        Hopper.h
        Beatle.cpp
        Beatle.h
)
